<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.ResultadoActivity">

    <TextView
        style="@style/base"
        android:text="@string/disciplina"/>

    <LinearLayout
        style="@style/base"
        android:orientation="horizontal"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_gravity="center">

            <TextView
                style="@style/base"
                android:text="@string/avaliacao1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                style="@style/base"
                android:text="@string/pdisciplina"/>

            <TextView
                style="@style/base"
                android:text="@string/pnota1"/>

            <TextView
                style="@style/base"
                android:text="@string/pnota2"/>

            <TextView
                style="@style/base"
                android:text="@string/pmedia"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/base"
        android:orientation="horizontal"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_gravity="center">

            <TextView
                style="@style/base"
                android:text="@string/avaliacao2"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                style="@style/base"
                android:text="@string/pdisciplina"/>

            <TextView
                style="@style/base"
                android:text="@string/pnota1"/>

            <TextView
                style="@style/base"
                android:text="@string/pnota2"/>

            <TextView
                style="@style/base"
                android:text="@string/pmedia"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>