<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".view.MainActivity">


    <Button
        style="@style/btn_sucesso"
        android:text="@string/avaliacao1"
        android:onClick="avaliacao1"/>

    <Button
        style="@style/btn_sucesso"
        android:text="@string/avaliacao2"
        android:onClick="avaliacao2"/>

    <Button
        style="@style/btn_sucesso"
        android:text="@string/resultado"
        android:onClick="resultado"/>

</LinearLayout>